--- a/week-01/index.html
+++ b/week-01/index.html
@@ -21,7 +21,7 @@
   </p>
 
   <p>
-    If everything is set up correctly, you should see a message in the Console.
+    If everything is set up correctly, you should see a message in the Console. aliyah.
   </p>
 
   <script src="script.js"></script>
